<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="398dp"
        android:background="#2196F3"
        android:gravity="center_horizontal"
        android:text="@string/cinepolis"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/funciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/piePagina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/la_capital_del_cine"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="26dp"
        android:scaleType="centerCrop"
        android:text="Hello World!"
        app:layout_constraintEnd_toStartOf="@+id/descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pie"
        app:srcCompat="@drawable/harrypotter" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/pelicula"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toTopOf="@+id/imagen" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:text="@string/harry_potter_viii_ing_2015"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="86dp"
        android:text="@string/por_favor_seleccione_un_horario"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <Spinner
        android:id="@+id/funciones"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="281dp"
        android:entries="@array/funciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/pie" />

    <Button
        android:id="@+id/comprarBoletos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/comprar_boletos"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/funciones"
        app:layout_constraintTop_toBottomOf="@+id/funciones" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="18dp"
        android:background="#CCCCC7"
        android:text="B15"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:background="@color/black"
        android:text="150 min"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="#4358EF"
        android:text="Fantasia"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />


</androidx.constraintlayout.widget.ConstraintLayout>